<resources>
    <string name="app_name">MyTodo</string>
    <string name="text">zhihu</string>
    <string name="title_search">search</string>
    <string name="title_item2">item2</string>
    <string name="title_item1">item1</string>
    <string name="title_notifications">title_notifications</string>
    <string name="title_toolbar">Title</string>
    <string name="subtitle_toolbar">sub title</string>
    <string name="item_search">Searching</string>
    <string name="item_notification">Notification</string>
    <string name="nav_text">Nav Text</string>
    <string name="drawer_title1">drawer_title1</string>
    <string name="drawer_title2">drawer_title2</string>
    <string name="all_task_title">All Tasks</string>
    <string name="taskdetail_title">task detail title</string>
    <string name="add_task_dialog">Add Task</string>
    <string name="add_title">标题</string>
    <string name="add_description">描述</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="addtask_title">Add Task</string>
    <string name="open_string">open</string>
    <string name="close_string">close</string>
    <string name="title_sync">sync</string>
    <string name="item_sync">sync</string>
    <string name="user_name">user name</string>
    <string name="user_email">user@email.com</string>
    <string name="user_name_login">name:</string>
    <string name="user_password_login">password:</string>
    <string name="title_login">log in</string>
    <string name="main_title">收集箱</string>
    <string name="description_hint">add note here</string>
    <string name="theme_green">green</string>
    <string name="theme_blue">blue</string>
    <string name="title_theme">主题</string>
    <string name="deleted">垃圾箱</string>
    <string name="title_update">检查更新</string>
    <string name="not_login">未登陆</string>
    <string name="title_main">收集箱</string>
    <string name="title_detail">详情</string>
    <string name="list_slide_top">置顶</string>
    <string name="list_slide_delete">删除</string>
</resources>
