<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item0"
            android:icon="@drawable/ic_list"
            android:title="@string/title_main" />
        <item
            android:id="@+id/item1"
            android:icon="@drawable/ic_delete"
            android:title="@string/deleted" />

        <item
            android:id="@+id/item2"
            android:icon="@drawable/ic_download"
            android:title="@string/title_update" />
    </group>

    <item android:title="@string/title_theme">
        <menu>
            <item
                android:id="@+id/item10"
                android:title="@string/theme_green"
                android:icon="@color/color_green"></item>
            <item
                android:id="@+id/item11"
                android:title="@string/theme_blue"
                android:icon="@color/color_zhihu_blue"
                ></item>
        </menu>
    </item>

</menu>